...
  bool get isLoading => _isLoading;
  CategoryModel? get selectedCategory => _selectedCategory;
  String? get selectedDifficulty => _selectedDifficulty;
  String? get selectedAmount => _selectedAmount;

  final List<CategoryModel> categories = [
    const CategoryModel(name: 'Any', id: 0),
    const CategoryModel(name: 'Genereal Unknowlegends', id: 9),
    const CategoryModel(name: 'Books', id: 10),
    const CategoryModel(name: 'Movies', id: 11),
    const CategoryModel(name: 'Music', id: 12),
    const CategoryModel(name: 'Video Games', id: 15),
  ];
...
