...
                      ),
                    ),
                    const SizedBox(height: 24),
                    Consumer<QuizViewModel>(
                      builder: (context, viewModel, child) {
                        return CustomButtonWidget(
                          text: 'NEXT',
                          enabled: viewModel.canProceed,
                          onPressed: () {
                            if (viewModel
                                .userAnswers[viewModel.currentQuestionIndex]
                                .isEmpty) {
                              viewModel.setUserAnswer(
...
