...
                          ),
                          const Spacer(),
                          Row(
                            children: [
                              Expanded(
                                child: CustomButtonWidget(
                                  text: 'TRY AGAIN',
                                  enabled: true,
                                  onPressed: () async {
                                    final quizViewModel =
                                        context.read<QuizViewModel>();

                                    quizViewModel.resetQuizForRetry();
...
